--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="si">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>පෝරමය</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <div class="form-container">
     <h2>පොදුගැලපෙන තොරතුරු</h2>
     <div class="progress">
