--- a/step2.html
+++ b/step2.html
@@ -2,10 +2,12 @@
 <html lang="si">
 <head>
   <meta charset="UTF-8">
-  <title>ලිපින තොරතුරු</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>පෝරමය</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  ...
   <div class="form-container">
     <h2>ලිපින තොරතුරු</h2>
     <div class="progress">
